--- a/scripts/system/html/entityList.html
+++ b/scripts/system/html/entityList.html
@@ -10,8 +10,9 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="css/edit-style.css">
-        <script src="js/list.min.js"></script>
+        <script type="text/javascript" src="js/list.js"></script>
         <script type="text/javascript" src="qrc:///qtwebchannel/qwebchannel.js"></script>
+        <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
         <script type="text/javascript" src="js/eventBridgeLoader.js"></script>
         <script type="text/javascript" src="js/spinButtons.js"></script>
         <script type="text/javascript" src="js/entityList.js"></script>
